# layout-quickcheck

./: .env.example  .flake8  .gitignore  MIT-LICENSE  Makefile  README.md  bug_report_helper.py  compare.py  counter.py  element_tree.py  file_config.py  html_file_generator.py  inspector.html  inspector.js  layout_comparer.py  layout_generator.py  layout_tester.py  minify_test_file.py  package-lock.json  package.json  pyproject.toml  recreate_template.js  requirements.txt  servoParser.js  servo_parser.py  setup.py  style_log_applier.py  style_log_generator.py  style_map.py  test_config.py  test_subject.py  threaded_web_server.py  variant_tester.py  verify.py  webpack.config.js
config/: default.config.json  emphasize-grid.config.json  nightly-firefox.json  preset-default.config.json  preset-firefox-dynamic-reflow-roots.config.json  preset-firefox-grid.config.json  preset-firefox.config.json  preset-test-grid.config.json  test-grid.config.json
css/: firefox.css
css_generators/: color_keyword.py  color_rgb.py  integer.py  keyword.py  length.py  number.py  style_data.py
docs/: CONFIGURATION.md  GRIZZLY.md  SELENIUM.md
infra/: lqc.service  nightly.sh
js/: inspector.js  styleLogApplier.js  styleLogGenerator.js  styleModifier.js
output_helpers/: analyze_output.py
src/: bug_report_helper.py  compare.py  config.py  counter.py  element_tree.py  file_config.py  layout_comparer.py  layout_tester.py  minify_test_file.py  run_subject.py  style_log_generator.py  style_map.py  test_imports.py  test_subject.py  variant_tester.py  variants.py  verify.py  (+1 more)
testfiles/: bug1.html  (+18 more)
(+143 files in other folders)
