[tool.poetry]
name = "layout-fuzzer"
version = "0.1.0"
description = ""
authors = ["William Shupe <williamshupe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
